# rust_api_demo

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
src/: main.rs
src/modules/: mod.rs
src/modules/core/: mod.rs
src/modules/core/application/: mod.rs  service.rs
src/modules/core/domain/: entity.rs  mod.rs  value_object.rs
src/modules/core/infrastructure/: mod.rs  web_server.rs
src/modules/home/: mod.rs
src/modules/product/: mod.rs
src/modules/product/application/: product_service.rs
src/modules/user/: mod.rs
src/modules/user/application/: user_service.rs
