[package]
name = "rust_api_server"
description = "A demo rust api server"
version = "0.1.1"
authors = ['Basant Besra <besrabasant@gmail.com>']
repository = "https://github.com/besrabasant/rust_api_demo"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["rust", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }


[profile.release]
opt-level = 3
debug = false